correction italian json

--- a/portail/client/src/assets/i18n/it.json
+++ b/portail/client/src/assets/i18n/it.json
@@ -91,124 +91,124 @@
   "communes": "Comuni",
   "cantons": "Cantoni",
 
-  "layer":{
-    "bicycle_routes": "Itinéraires cyclables",
-    "buildings": "Bâtiments",
-    "bus_routes": "Itinéraires de bus",
-    "clinics": "Cliniques",
-    "cycleways": "Pistes cyclables",
-    "hiking_routes": "Itinéraires de randonnée",
-    "hospitals": "Hôpitaux",
-    "landuses": "Occupation du sol",
-    "motorways": "Autoroutes",
-    "pharmacies": "Pharmacies",
-    "pnr": "Parcs Naturels Régionaux",
-    "police": "Polices et Gendarmeries",
-    "railways": "Voies ferrées",
-    "schools": "Écoles",
-    "shops": "Magasins",
-    "subway_routes": "Itinéraires de métro",
-    "telecom_copper": "Sous-répartiteurs cuivre",
-    "telecom_exchange": "Noeuds de raccordement",
-    "telecom_fibre": "Points de mutualisation fibre",
-    "tram_routes": "Itinéraires de tramway",
-    "train_routes": "Itinéraires de train",
-    "social_amenities": "Structures sociales",
-    "constructions": "Constructions en cours",
-    "proposed": "Propositions de constructions"
-},
-"change": {
-    "info": "Informations sur l'objet",
-    "elements": "élément(s) à proximité",
-    "interval": "Aucun changement dans l'intervalle considéré",
-    "user": "Dernier utilisateur",
-    "timestamp": "Dernier timestamp",
-    "changeset": "Dernier changeset",
-    "transitions": "Changest(s) intermédiaire(s)",
-    "attributes": "Attributs OpenStreetMap",
-    "key": "clef",
-    "value": "valeur",
-    "metadata": "Méta-données",
-    "historic": "Historique de l'objet OSM",
-    "version": "Version"
-},
-"change_config": {
-    "search": "Rechercher des changements",
-    "time": "Période de temps",
-    "topic": "Thématique",
-    "select_topic": "Sélectionnez une thématique",
-    "footprint": "Emprise géographique",
-    "zone": "Déplacez-vous sur la carte pour sélectionner la zone de recherche",
-    "launch": "Lancer la recherche",
-    "update": "Dernière mise à jour le",
-    "nochange": "Aucun changement n'a été trouvé pour cette requête.",
-    "results": "résultats ont été trouvés",
-    "size1": "La taille de la réponse",
-    "size2": "est importante et les résultats risquent d'être lourds à afficher.",
-    "size3": "Vous pouvez zoomer pour réduire la zone de recherche ou limiter la plage de dates, puis relancer la recherche ou poursuivre le chargement des données.",
-    "continue": "Poursuivre",
-    "expire1": "La requête a expiré. Il est possible que le volume de changements soit trop important.",
-    "expire2": "Vous pouvez zoomer pour réduire la zone de recherche ou limiter la plage de dates, puis relancer la recherche.",
-    "error": "Désolé, une erreur s'est produite.",
-    "summary": "Récapitulatif",
-    "from": "De",
-    "to": "au",
-    "category": "Catégorie",
-    "number": "Nombre d'entités",
+  "layer": {
+    "bicycle_routes": "Percorsi ciclabili",
+    "buildings": "Edifici",
+    "bus_routes": "Percorsi degli autobus",
+    "clinics": "Cliniche",
+    "cycleways": "Piste ciclabili",
+    "hiking_routes": "Percorsi escursionistici",
+    "hospitals": "Ospedali",
+    "landuses": "Uso del suolo",
+    "motorways": "Autostrade",
+    "pharmacies": "Farmacie",
+    "pnr": "Parchi Naturali Regionali",
+    "police": "Polizia e Gendarmerie",
+    "railways": "Ferrovia",
+    "schools": "Scuole",
+    "shops": "Negozi",
+    "subway_routes": "Percorsi della metropolitana",
+    "telecom_copper": "Sotto-repartitori in rame",
+    "telecom_exchange": "Nodi di collegamento",
+    "telecom_fibre": "Punti di mutualizzazione della fibra",
+    "tram_routes": "Percorsi del tram",
+    "train_routes": "Percorsi del treno",
+    "social_amenities": "Strutture sociali",
+    "constructions": "Costruzioni in corso",
+    "proposed": "Proposte di costruzioni"
+  },
+  "change": {
+    "info": "Informazioni sull'oggetto",
+    "elements": "elemento/i nelle vicinanze",
+    "interval": "Nessuna modifica nell'intervallo considerato",
+    "user": "Ultimo utente",
+    "timestamp": "Ultimo timestamp",
+    "changeset": "Ultimo changeset",
+    "transitions": "Changeset intermedi",
+    "attributes": "Attributi OpenStreetMap",
+    "key": "chiave",
+    "value": "valore",
+    "metadata": "Metadati",
+    "historic": "Cronologia dell'oggetto OSM",
+    "version": "Versione"
+  },
+  "change_config": {
+    "search": "Ricerca cambiamenti",
+    "time": "Periodo di tempo",
+    "topic": "Tematica",
+    "select_topic": "Seleziona una tematica",
+    "footprint": "Impronta geografica",
+    "zone": "Spostati sulla mappa per selezionare l'area di ricerca",
+    "launch": "Avvia la ricerca",
+    "update": "Ultimo aggiornamento il",
+    "nochange": "Nessuna modifica trovata per questa richiesta.",
+    "results": "risultati trovati",
+    "size1": "La dimensione della risposta",
+    "size2": "è grande e i risultati potrebbero essere difficili da visualizzare.",
+    "size3": "Puoi zoomare per ridurre l'area di ricerca o limitare l'intervallo di date, quindi rilanciare la ricerca o continuare a caricare i dati.",
+    "continue": "Continua",
+    "expire1": "La richiesta è scaduta. È possibile che il volume dei cambiamenti sia troppo grande.",
+    "expire2": "Puoi zoomare per ridurre l'area di ricerca o limitare l'intervallo di date, quindi rilanciare la ricerca.",
+    "error": "Spiacente, si è verificato un errore.",
+    "summary": "Riepilogo",
+    "from": "Da",
+    "to": "a",
+    "category": "Categoria",
+    "number": "Numero di entità",
     "url": "https://ch-osm.geodatasolutions.ch/changes-it",
-    "help": "Voir l'aide",
-    "legende": "Légende",
-    "select": "Tout (dé)selectionner",
-    "create": "Création",
-    "add": "Ajout",
-    "modif_tag": "Modification de tag(s) uniquement",
-    "modif_geo": "Modification de géométrie uniquement",
-    "remove": "Retrait",
-    "delete": "Suppression",
-    "other": "Autre",
-    "tagandgeo": "Modification de tag(s) et de géométrie",
-    "heatmap": "Carte de chaleur",
-    "geometry": "Géométrie de l'objet",
-    "new_geometry": "Nouvelle géométrie",
-    "old_geometry": "Ancienne géométrie"
-},
-"attribute": {
-    "nodata": "Pas de données",
-    "nberpage": "Nombre d'éléments par page",
-    "gopage": "Aller à la page :",
-    "previouspage": "Page précédente :",
-    "nextpage": "Page suivante :",
-    "on": "sur",
-    "elements": "éléments"
-},
-"alert": {
-    "display": "Impossible d'afficher la couche à ce niveau.",
-    "display2": "Zoomez jusqu'au niveau",
-    "display3": "pour voir la couche"
-},
-"days": {
-    "su": "Dim",
+    "help": "Vedi l'aiuto",
+    "legende": "Legenda",
+    "select": "Seleziona/Deseleziona tutto",
+    "create": "Creazione",
+    "add": "Aggiunta",
+    "modif_tag": "Modifica solo di tag",
+    "modif_geo": "Modifica solo di geometria",
+    "remove": "Rimozione",
+    "delete": "Eliminazione",
+    "other": "Altro",
+    "tagandgeo": "Modifica di tag e geometria",
+    "heatmap": "Mappa di calore",
+    "geometry": "Geometria dell'oggetto",
+    "new_geometry": "Nuova geometria",
+    "old_geometry": "Vecchia geometria"
+  },
+  "attribute": {
+    "nodata": "Nessun dato",
+    "nberpage": "Numero di elementi per pagina",
+    "gopage": "Vai alla pagina:",
+    "previouspage": "Pagina precedente:",
+    "nextpage": "Pagina successiva:",
+    "on": "su",
+    "elements": "elementi"
+  },
+  "alert": {
+    "display": "Impossibile visualizzare il livello a questo zoom.",
+    "display2": "Zooma fino al livello",
+    "display3": "per visualizzare il livello"
+  },
+  "days": {
+    "su": "Dom",
     "mo": "Lun",
     "tu": "Mar",
     "we": "Mer",
-    "th": "Jeu",
+    "th": "Gio",
     "fr": "Ven",
-    "sa": "Sam"
-},
-"months": {
-    "1": "Jan",
-    "2": "Fév",
+    "sa": "Sab"
+  },
+  "months": {
+    "1": "Gen",
+    "2": "Feb",
     "3": "Mar",
-    "4": "Avr",
-    "5": "Mai",
-    "6": "Juin",
-    "7": "Juil",
-    "8": "Aoû",
-    "9": "Sep",
-    "10": "Oct",
+    "4": "Apr",
+    "5": "Mag",
+    "6": "Giu",
+    "7": "Lug",
+    "8": "Ago",
+    "9": "Set",
+    "10": "Ott",
     "11": "Nov",
-    "12": "Déc"
-},
-"selectBeginDateTxt": "Choisir la date de début",
-"selectEndDateTxt": "Choisir la date de fin"
+    "12": "Dic"
+  },
+  "selectBeginDateTxt": "Scegli la data di inizio",
+  "selectEndDateTxt": "Scegli la data di fine"
 }
