fix name in json i18n

--- a/portail/client/src/assets/i18n/de.json
+++ b/portail/client/src/assets/i18n/de.json
@@ -98,6 +98,7 @@
       "clinics": "Kliniken",
       "cycleways": "Velowegen",
       "hiking_routes": "Wanderwege",
+      "highways": "Strassennetz",
       "hospitals": "Spitäler",
       "landuses": "Landnutzung",
       "motorways": "Autobahnen",
@@ -109,7 +110,7 @@
       "shops": "Geschäfte",
       "subway_routes": "U-Bahn-Linien",
       "telecom_copper": "Kupfer-Nachverteilernetze",
-      "telecom_exchange": "Verkabelungsknoten",
+      "telecom_layer": "Verkabelungsknoten",
       "telecom_fibre": "Fibre-Mutualisierungsstellen",
       "tram_routes": "Tramlinien",
       "train_routes": "Zuglinien",
