--- a/portail/client/src/assets/i18n/en.json
+++ b/portail/client/src/assets/i18n/en.json
@@ -98,6 +98,7 @@
       "clinics": "Clinics",
       "cycleways": "Cycleways",
       "hiking_routes": "Hiking Trails",
+      "highways": "Road Network",
       "hospitals": "Hospitals",
       "landuses": "Land Uses",
       "motorways": "Motorways",
@@ -109,7 +110,7 @@
       "shops": "Shops",
       "subway_routes": "Subway Lines",
       "telecom_copper": "Copper Distribution Networks",
-      "telecom_exchange": "Network Nodes",
+      "telecom_layer": "Network Nodes",
       "telecom_fibre": "Fibre Mutualization Points",
       "tram_routes": "Tram Routes",
       "train_routes": "Train Routes",
