--- a/portail/client/src/assets/i18n/fr.json
+++ b/portail/client/src/assets/i18n/fr.json
@@ -98,6 +98,7 @@
         "clinics": "Cliniques",
         "cycleways": "Pistes cyclables",
         "hiking_routes": "Itinéraires de randonnée",
+        "highways": "Réseau routier",
         "hospitals": "Hôpitaux",
         "landuses": "Occupation du sol",
         "motorways": "Autoroutes",
@@ -109,7 +110,7 @@
         "shops": "Magasins",
         "subway_routes": "Itinéraires de métro",
         "telecom_copper": "Sous-répartiteurs cuivre",
-        "telecom_exchange": "Noeuds de raccordement",
+        "telecom_layer": "Noeuds de raccordement",
         "telecom_fibre": "Points de mutualisation fibre",
         "tram_routes": "Itinéraires de tramway",
         "train_routes": "Itinéraires de train",
