--- a/portail/client/src/assets/i18n/rm.json
+++ b/portail/client/src/assets/i18n/rm.json
@@ -98,6 +98,7 @@
         "clinics": "Clinicas",
         "cycleways": "Pistas ciclabils",
         "hiking_routes": "Itineraris da randun",
+        "highways": "Rais da vias",
         "hospitals": "Hospitals",
         "landuses": "Occupaziun dal teren",
         "motorways": "Autostradas",
@@ -109,7 +110,7 @@
         "shops": "Negozis",
         "subway_routes": "Itineraris da metro",
         "telecom_copper": "Sub-repartidors copper",
-        "telecom_exchange": "Nodes da raccordament",
+        "telecom_layer": "Nodes da raccordament",
         "telecom_fibre": "Punts da mutualisaziun fibra",
         "tram_routes": "Itineraris da tram",
         "train_routes": "Itineraris da tren",
