--- a/portail/client/src/assets/i18n/en.json
+++ b/portail/client/src/assets/i18n/en.json
@@ -110,7 +110,7 @@
       "shops": "Shops",
       "subway_routes": "Subway Lines",
       "telecom_copper": "Copper Distribution Networks",
-      "telecom_layer": "Network Nodes",
+      "telecom_exlayer": "Network Nodes",
       "telecom_fibre": "Fibre Mutualization Points",
       "tram_routes": "Tram Routes",
       "train_routes": "Train Routes",
